# Database

./: CMakeLists.txt  Readme.md
bufferManager/: CMakeLists.txt
bufferManager/include/: FIFO.h  LRU.h  Page.h  buffer_mgr.h  strategy.h
bufferManager/source/: FIFO.c  LRU.c  buffer_mgr.c  buffer_mgr_stat.c  strategy.c
common/: CMakeLists.txt
common/include/: dberror.h
databaseManager/: CMakeLists.txt
databaseManager/include/: storage_mgr.h
databaseManager/src/: storage_mgr.c
indexManager/: CMakeLists.txt
indexManager/include/: Implement_btree.h  btree_mgr.h
indexManager/src/: Implement_btree.c  btree_mgr.c
recordManager/: CMakeLists.txt
recordManager/include/: custom_structs.h  expr.h  record_mgr.h  tables.h
recordManager/src/: expr.c  record_mgr.c  rm_serializer.c
test/: CMakeLists.txt
test/src/bufferManager/: test_assign2_1.c  test_assign2_2.c
test/src/databaseManager/: test_assign1_1.c
test/src/indexManager/: test_assign4_1.c
test/src/recordManager/: marcin_test.c  test_assign3_1.c  test_expr.c
